# raw

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/raw/: config.py
src/raw/application/: __init__.py  common.py  identifier.py  task.py
src/raw/application/commands/: add.py  edit.py  remove.py  start.py  stop.py
src/raw/application/queries/: find.py  find_by_id.py  find_by_identifier.py  get_active_sessions.py
src/raw/application/services/: group.py  groups.py  system.py  tag.py
src/raw/cli/: __init__.py  config.py  connection.py  constants.py  editor.py  parser.py  proxy.py  resolvers.py
src/raw/cli/commands/: add.py  edit.py  find.py  gas.py  groups.py  init.py  remove.py  sql.py  start.py  stop.py
src/raw/cli/handlers/: add.py  edit.py  find.py  gas.py  init.py  remove.py  sql.py  start.py  stop.py
src/raw/cli/icmds/: __init__.py
src/raw/cli/parsers/: __init__.py  args.py  infix.py
src/raw/common/: _parsers.py  config.py  constants.py  evalreq.py
src/raw/daemon/: __init__.py  funcs.py  handler.py  repository.py  service.py
src/raw/domain/: __init__.py  editors.py  entities.py  enums.py  exc.py  interfaces.py  spec.py  value_objects.py
src/raw/infrastructure/: __init__.py
src/raw/rawd/: __init__.py  daemon.py  handler.py
src/raw/shared/: __init__.py  sentinel.py
src/sine/cli/: __init__.py  constants.py
src/sine/common/: __init__.py  _parsers.py  config.py  constants.py  driller.py  evalreq.py  parsers.py
src/sine/daemon/: daemon.py  funcs.py  handler.py
src/uzi/common/: constants.py
src/wu/cli/: constants.py
(+133 files in other folders)
