[project]
name = "raw"
version = "1.3.4"
description = "unstable lifeos"
readme = "README.md"

authors = [
    {name = "Dvodnenko",email = "thekovalskii@gmail.com"}
]

packages = [
    { include = "raw", from = "src" }
]

requires-python = ">=3.12"
dependencies = [
    "dateparser (>=1.2.2,<2.0.0)",
    "sqlglot (>=28.6.0,<29.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
raw = "raw.cli:main"
