[project]
name = "raw"
version = "2.0.0"
description = "unstable lifeos"
readme = "README.md"

authors = [
    {name = "Dvodnenko",email = "thekovalskii@gmail.com"}
]

packages = [
    { include = "raw", from = "src" }
]

requires-python = ">=3.12"
dependencies = [
    "sqlglot (>=28.6.0,<29.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
raw = "raw.cli:main"

[tool.poetry.group.dev.dependencies]
nuitka = "^4.0"
